# PHASTA-TUOS

./: .gitignore  CMakeLists.txt  README.md  STYLE.md  intertrack_compile.sh  second_intertrack_compile.sh  stanage_compile.sh
Average12.3/: Average.f  Runme_Average
M2N/src/: new_interface.c  readnblk.f
M2NFixBnd/src/: new_interface.c  readnblk.f
Merge/: Merge.f  Runme_Merge  compile_command  merge.inp
phMetis/lib/: balance.c  bucketsort.c  ccgraph.c  coarsen.c  compress.c  debug.c  defs.h  estmem.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  kmetis.c  kvmetis.c  kwayfm.c  kwayrefine.c  kwayvolfm.c  kwayvolrefine.c  macros.h  match.c  mbalance.c  mbalance2.c  mcoarsen.c  memory.c  mesh.c  meshpart.c  metis.h  mfm.c  mfm2.c  mincover.c  minitpart.c  minitpart2.c  mkmetis.c  mkwayfmh.c  mkwayrefine.c  mmatch.c  mmd.c  mpmetis.c  mrefine.c  (+18 more)
phMetis/lib/.svn/: dir-wcprops  entries
phMetis/lib/.svn/text-base/: kmetis.c.svn-base  kvmetis.c.svn-base  proto.h.svn-base  util.c.svn-base
phMetis/lib/.svn/wcprops/: balance.c.svn-work  bucketsort.c.svn-work  ccgraph.c.svn-work  coarsen.c.svn-work  compress.c.svn-work  debug.c.svn-work  defs.h.svn-work  estmem.c.svn-work  fm.c.svn-work  fortran.c.svn-work  frename.c.svn-work  graph.c.svn-work  initpart.c.svn-work  kmetis.c.svn-work  kvmetis.c.svn-work  kwayfm.c.svn-work  kwayrefine.c.svn-work  kwayvolfm.c.svn-work  kwayvolrefine.c.svn-work  macros.h.svn-work  match.c.svn-work  mbalance.c.svn-work  mbalance2.c.svn-work  mcoarsen.c.svn-work  memory.c.svn-work  mesh.c.svn-work  meshpart.c.svn-work  metis.h.svn-work  mfm.c.svn-work  mfm2.c.svn-work  mincover.c.svn-work  minitpart.c.svn-work  minitpart2.c.svn-work  mkmetis.c.svn-work  mkwayfmh.c.svn-work  mkwayrefine.c.svn-work  mmatch.c.svn-work  mmd.c.svn-work  mpmetis.c.svn-work  mrefine.c.svn-work  (+18 more)
phNSpre/: CHANGES  Makefile  compile_command  compile_debug.sh
phNSpre/src-parallel/: Makefile  PartitionDriver.cc  sonfath.f
phNSpre/src-serial/: BoundaryCondition.cc  BoundaryCondition.h  EnsaArrays.cc  EnsaParameters.h  EssentialBC.cc  EssentialBC.h  F_coord.cc  F_exists.cc  InitBCinput.cc  InitialCondition.cc  InitialCondition.h  Makefile  MeshSimInternal.h  NaturalBC.cc  NaturalBC.h  PeriodicBC.cc  PeriodicBC.h  R_entities.cc  R_entities.cc_cut_Igor  SPEBC.cc  SPEBC.h  UserWeight.cc  attachIBC.cc  attachPeriodicBC.cc  face_extraction.cc  genblock.cc  gendual.cc  geom.saf  getData.cc  getMaster.cc  lin2quad.cc  localInfo.cc  mdb2phasta.cc  mdb2phasta.cc.mine  mdb2phasta.cc.r2014  mdb2phasta.cc.r2019  mdb2phasta.cc_SPJ_VERSION  memProf.cc  mesh_interface.cc  mesh_interface.h  (+14 more)
phPost/Reduce/: CHANGES  Makefile  compile_command  compile_mpich2
phPost/Reduce/src/: ascii_output.cc  dx_output.cc  geom_connectivity.cc  howto_add_new_field.README  phasta_output.cc  procArgs.cc  reduce.cc  reduce.h  tecplot_output.cc  wrtc.cc
phPost/include/: reduce.h
phSolver/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  solver.inp
phSolver/AMG/: Makefile  ramg_ITAI.f  ramg_coarse.f  ramg_control.f  ramg_data.f  ramg_driver.f  ramg_extract.f  ramg_ggb.f  ramg_mls.f  ramg_paratools.f  ramg_smoother.f  ramg_tools.f
phSolver/common/: Cinput.cc  Makefile  ValType.cc  asadj.f  bctint.f  blkdta.f  bubArr.f  cname.f  common.h  common_c.h  commu.f  ctypes.f  d2wall.c  eqn_plane.f  error.f  flush.c  genadj.f  genbc.f  genbkb.f  genblk.f  gendat.f  genibc.f  genini.f  genscale.f  genscale.f_old  getIntPnts.c  getvel.f  gltri.c  gtnods.f  input.config  input.f  input_fform.cc  local.f  localy.f  mpitools.f  new_interface.c  new_interface.h  partition.cc  phasta.cc  pointer.f  (+25 more)
phSolver/compressible/: Makefile  Makefile_saved_102011  asigmr.f  e3.f  e3dc.f  e3eig1.f  e3ls.f  e3source.f  e3tau.f  e3visc.f  elmgmr.f  get_h.c  getdiff.f  gltet.c  itrbc.f  itrdrv.f  main.c  rstat.f  solgmr.f  stats.f  tnanq.f  tnanqe.f
phSolver/incompressible/: CMakeLists.txt  CMakeLists.txt_Hong  Makefile  Makefile_BG  advLES.f  asbflx.f  asbforce.f  asbmfg.f  asigmr.f  asiq.f  bc3lhs.f  bflux.f  bubStat.f  bubboil.f  calc_cfl.f  calc_delt.f  check_proximity.f  coalescapptime.f  coalesccon.f  compile_command.sh  compile_debug.sh  conforce.f  e3.f  e3b.f  e3b.f_Farhad  e3bvar.f  e3dc.f  e3ivar.f  e3lhs.f  e3q.f  e3ql.f  e3qvar.f  e3res.f  e3source.f  e3stab.f  elmStats.f  elmgmr.f  errsmooth.f  filters.f  forces.f  (+22 more)
phSolver/incompressible/test/: CMakeLists.txt  CMakeLists.txt_1  CTestTestfile.cmake  Makefile  cmake_install.cmake
shapeFunction/src/.svn/: dir-wcprops  entries
shapeFunction/src/.svn/wcprops/: Bn.c.svn-work  BnDrv.c.svn-work  En.c.svn-work  EnDrv.c.svn-work  (+11 more)
svLS/: LHS.f
